Fixed deployment issues and made sure all internal links are working + minor fixes to build errors

--- a/content/casks/cask-server.mdx
+++ b/content/casks/cask-server.mdx
@@ -150,7 +150,7 @@ To see the full list go to [http://localhost:9022/schema-explorer](http://localh
 
 ## Querying Data
 
-{% page-ref page="../querying-with-vyne/query-api.md" %}
+If you have not had the chance to familiarize yourself with the Vyne's querying api, be sure to go <Link to="../../querying-with-vyne/query-api">here</Link>
 
 For this demo we going to use VyneQL.
 
