--- a/content/deployment/advanced-configuration.mdx
+++ b/content/deployment/advanced-configuration.mdx
@@ -1,5 +1,5 @@
 ---
-title: \(deprecated\) Advanced configuration
+title: (deprecated) Advanced configuration
 description: Instructions if you need a much more advanced configuration
 ---
 
