--- a/content/developers-guide/setting-up-vyne-locally.mdx
+++ b/content/developers-guide/setting-up-vyne-locally.mdx
@@ -13,11 +13,11 @@ This guide walks you through common use cases for running Vyne, and getting thin
 
 From here, getting started depends on what you'd like to achieve.  We have guides to help you get started locally for the following:
 
-* <Link to="../setting-up-vyne-locally#automating-api-integration">Exploring Vyne's automated API integrations</Link>
-* <Link to="../setting-up-vyne-locally#building-a-standalone-taxonomy">[Building a standalone
-  taxonomy</Link>
-* <Link to="../setting-up-vyne-locally#building-streaming-data-solutions">Building streaming data solutions</Link>
-* <Link to="../setting-up-vyne-locally#ingesting-and-querying-file-based-data">Ingesting and querying flat-based data \(CSV, Json, Xml, etc\)</Link>
+* <a href="#automating-api-integration">Exploring Vyne's automated API integrations</a>
+* <a href="#building-a-standalone-taxonomy">Building a standalone
+  taxonomy</a>
+* <a href="#building-streaming-data-solutions">Building streaming data solutions</a>
+* <a href="#ingesting-and-querying-file-based-data">Ingesting and querying flat-based data (CSV, Json, Xml, etc)</a>
 
 ## Automating API integration
 
@@ -54,7 +54,7 @@ docker-compose up -d
 
 Wait a bit, then head to http://localhost:9022.
 
-We have a dedicated guide to building and publishing a taxonomy, which you can follow along with <Link to="../running-a-local-taxonomy-editor-environment/">here</Link>.
+We have a dedicated guide to building and publishing a taxonomy, which you can follow along with <Link to="../../running-a-local-taxonomy-editor-environment/README">here</Link>.
 
 
 ## Ingesting and querying file based data
@@ -75,7 +75,7 @@ docker-compose up -d
 
 Wait a bit, then head to http://localhost:9022.
 
-We have a dedicated guide to storing and querying flat-file data, which you can follow along with <Link to="../../casks/cask-server.md">here</Link>.
+We have a dedicated guide to storing and querying flat-file data, which you can follow along with <Link to="../../casks/cask-server">here</Link>.
 
 ## Building streaming data solutions
 
