--- a/content/overview/README.mdx
+++ b/content/overview/README.mdx
@@ -1,5 +1,5 @@
 ---
-titel: Overview
+title: Overview
 description: >-
   Vyne automates API integration, and provides rich data discovery, so you can
   spend less time plumbing, and more time building.
