--- a/content/running-a-local-taxonomy-editor-environment/building-and-testing-a-mapping.mdx
+++ b/content/running-a-local-taxonomy-editor-environment/building-and-testing-a-mapping.mdx
@@ -42,7 +42,7 @@ type OrderWindowSummaryCsv {
 }
 ```
 
-Here's a sample source file to go along with it <a href="/assets/coinbase_btcusd_single.csv">"Sample CSV File"</a>
+Here's a sample source file to go along with it ["Sample CSV File"](/assets/coinbase_btcusd_single.csv)
 
 ### Uploading a source
 
