--- a/content/schema-server.mdx
+++ b/content/schema-server.mdx
@@ -171,7 +171,7 @@ services:
     <tr>
       <td style="text-align:left">taxi.change-detection-method</td>
       <td style="text-align:left">watch</td>
-      <td style="text-align:left">Possible options: <code>watch | poll</code>. See<a href="schema-server.md#configuring-change-detection-mode"> configuring change detection</a> for
+      <td style="text-align:left">Possible options: <code>watch | poll</code>. See<a href="#configuring-change-detection-mode"> configuring change detection</a> for
         more detail.</td>
     </tr>
     <tr>
