--- a/content/developers-guide/basic-walkthrough-hello-world.mdx
+++ b/content/developers-guide/basic-walkthrough-hello-world.mdx
@@ -30,63 +30,60 @@ Make sure you've got the Vyne server <Link to="../running-the-vyne-server">up & 
 
 Here's the `pom.xml` for our demo project. Most of it is boilerplate, except for the `vyne-spring` dependency.
 
-<code>
 ```markup
-\<?xml version="1.0" encoding="UTF-8"?\>
-\<project xmlns="http://maven.apache.org/POM/4.0.0"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"\>
-    \<parent\>
-        \<groupId\>org.springframework.boot\</groupId\>
-        \<artifactId\>spring-boot-starter-parent\</artifactId\>
-        \<version\>2.0.5.RELEASE\</version\>
-    \</parent\>
-    <modelVersion>4.0.0\</modelVersion\>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.5.RELEASE</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    \<groupId\>io.vyne.demos.minimal\</groupId\>
-    \<artifactId\>minimal\</artifactId\>
+    <groupId>io.vyne.demos.minimal</groupId>
+    <artifactId>minimal</artifactId>
 
-    \<properties\>
-        \<spring.cloud.netflix.version\>2.0.1.RELEASE\</spring.cloud.netflix.version\>
-        \<vyne.version\>0.1.3-SNAPSHOT\</vyne.version\>
-        \<kotlin.version\>1.2.71\</kotlin.version\>
-    \</properties\>
+    <properties>
+        <spring.cloud.netflix.version>2.0.1.RELEASE</spring.cloud.netflix.version>
+        <vyne.version>0.1.3-SNAPSHOT</vyne.version>
+        <kotlin.version>1.2.71</kotlin.version>
+    </properties>
 
-    \<dependencies\>
-        \<dependency\>
-            \<groupId\>org.springframework.boot\</groupId\>
-            \<artifactId\>spring-boot-starter-web\</artifactId\>
-        \</dependency\>
-        \<dependency\>
-            \<groupId\>org.springframework.cloud\</groupId\>
-            \<artifactId\>spring-cloud-starter-netflix-eureka-client\</artifactId\>
-            \<version\>${spring.cloud.netflix.version}\</version\>
-        \</dependency\>
-        \<dependency\>
-            \<groupId\>org.jetbrains.kotlin\</groupId\>
-            \<artifactId\>kotlin-stdlib-jdk8\</artifactId\>
-            \<version\>${kotlin.version}\</version\>
-        \</dependency\>
-        \<dependency\>
-            \<groupId\>io.vyne\</groupId\>
-            \<artifactId\>vyne-spring\</artifactId\>
-            \<version\>${vyne.version}\</version\>
-        \</dependency\>
-    \</dependencies\>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>${spring.cloud.netflix.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.vyne</groupId>
+            <artifactId>vyne-spring</artifactId>
+            <version>${vyne.version}</version>
+        </dependency>
+    </dependencies>
 
-    \<build\>
-        \<plugins\>
-            \<plugin\>
-                \<groupId\>org.jetbrains.kotlin\</groupId\>
-                \<artifactId\>kotlin-maven-plugin\</artifactId\>
-                \<version\>${kotlin.version}\</version\>
-            \</plugin\>
-        \</plugins\>
-    \</build\>
-
-\</project\>xml
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+            </plugin>
+        </plugins>
+    </build>
+</project>xml
 ```
-</code>
 
 ## Vanilla Spring Boot
 
