--- a/content/querying-with-vyne/query-api.mdx
+++ b/content/querying-with-vyne/query-api.mdx
@@ -3,7 +3,9 @@ title: Rest API
 description: Vyne offers two REST apis for querying data. Simple Query and VyneQL.
 ---
 
-All the examples here are based on the [Sample Instrument Service]().
+import { Link } from 'gatsby'
+
+All the examples here are based on the <Link to="../../developers-guide/README">Sample Instrument Service</Link>.
 
 ## Simple Query API
 
