Changed internal inks to anchor tags on two files causing build errors

--- a/content/developers-guide/storing-data-in-cask.mdx
+++ b/content/developers-guide/storing-data-in-cask.mdx
@@ -42,9 +42,7 @@ To get started locally, <Link to="../setting-up-vyne-locally#ingesting-and-query
 
 We are going to have two files, one containing customer data and the other containing purchase records. The files we are producing are downloaded below:
 
-[customers.csv](/assets/customers.csv)
-
-[purchases.csv](/assets/purchases.csv)
+<a href="/assets/customers.csv" target="_blank" download>customers.csv</a>&nbsp;<a href="/assets/purchases.csv" target="_blank" download>purchases.csv</a>
 
 Inside the csv files, the data will look like this:
 
